Corregir error tipográfico en el archivo index.html
Se ha corregido un pequeño error tipográfico en el archivo index.html, donde se encontraba una palabra escrita incorrectamente.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1>Ignacio Jerez</h1>
                 <h3>(He/Him)</h3>
                 <h4>Developer</h4>        
-                <a id="sendEmail" href="mailto:ignanj8@gmail.com">Send me and email</a>    
+                <a id="sendEmail" href="mailto:ignanj8@gmail.com">Send me an email</a>    
                 <div id="social">
                     <a class="imagen-con-zoom" href="https://www.linkedin.com/in/ignaciojerez/"><img src="src/iconLinkedin.png" alt="ícono de linkedin"></a>
                     <a class="imagen-con-zoom" href="https://github.com/ignacix"><img src="src/iconGithub.png" alt="ícono de github"></a>
